# femus

./: .directory  .gitignore  AUTHORS  AUTHORS.txt  Brewfile  CMakeLists.txt  DartConfiguration.tcl  INSTALL  README.md  Study1  Study1.hdf  Study2  TODO  UseFemus.CMake  UseFemus.CMake.in
Applications/BackwardEulerNavierStokesParallel/: .directory  CMakeLists.txt  main.cpp
Applications/FSI_CMS_NWM/: CMakeLists.txt  main.cpp
Applications/FSI_TUREK_3/: .directory  CMakeLists.txt  main.cpp
Applications/TaylorGreenVortexFlowGeneralisedalpha/: .directory  CMakeLists.txt  main.cpp
Applications/mhdopt/: CMakeLists.txt  EqnMHD.cpp  EqnMHD.hpp  EqnMHDAD.cpp  EqnMHDAD.hpp  EqnMHDCONT.cpp  EqnMHDCONT.hpp  EqnNS.cpp  EqnNSAD.cpp  EqnNSAD.hpp  OptBcIc.cpp  OptLoop.cpp  OptPhysics.cpp  OptQuantities.cpp  OptQuantities.hpp  Opt_conf.hpp  main.cpp  main.kdev4
Applications/temper/: CMakeLists.txt  EqnNS.cpp  EqnNS.hpp  EqnT.cpp  TempBcIc.cpp  TempPhysics.cpp  TempPhysics.hpp  TempQuantities.cpp  TempQuantities.hpp  Temp_conf.hpp  main.cpp  temper.kdev4
applications/: CMakeLists.txt  Lshape.dbs  Lshape3D.dbs  adaptiveRef16.dbs  adaptiveRef4.dbs
applications/000_tutorial/: CMakeLists.txt  all_mesh_generation_methods.hpp
applications/001_Poisson/: CMakeLists.txt  main.cpp
applications/001_Poisson_AMR/: CMakeLists.txt  main.cpp
applications/005_FSI/: CMakeLists.txt
applications/00_tutorial/: CMakeLists.txt  all_mesh_generation_methods.hpp  tutorial_common.hpp
applications/010_OptimalControl/: CMakeLists.txt  fractional_functions.hpp  opt_systems_boundary_control_eqn_sobolev_fractional.hpp  opt_systems_boundary_control_eqn_sobolev_integer.hpp  opt_systems_elliptic_dirichlet.hpp  opt_systems_elliptic_neumann.hpp  opt_systems_ns_dirichlet.hpp  param.hpp  square_or_cube_00_mesh_files_for_control.hpp  square_or_cube_01b_control_faces_domain_elements.hpp  square_or_cube_02_boundary_conditions.hpp  square_or_cube_03_cost_functional_without_regularization.hpp  square_or_cube_04_cost_functional_regularization.hpp
applications/050_RK/: CMakeLists.txt
applications/090_SW/: CMakeLists.txt
applications/091_Tumor/: CMakeLists.txt
applications/2021_fall/: CMakeLists.txt  assignment.txt
applications/AMR/: CMakeLists.txt
applications/BackwardEulerNavierStokesParallel/: CMakeLists.txt  main.cpp
applications/Conformal/: CMakeLists.txt
applications/FSI/: CMakeLists.txt  vein_valve.dbs
applications/FSI_CMS_NWM/: CMakeLists.txt  main.cpp
applications/FSI_TUREK_1/: CMakeLists.txt  main.cpp
applications/FSI_TUREK_3/: CMakeLists.txt  main.cpp
applications/Generalizedwillmore/: CMakeLists.txt  Generalizedwillmore.cpp
applications/ISM/: CMakeLists.txt
applications/MGAMR/: CMakeLists.txt
applications/MPM_FEM/: CMakeLists.txt
applications/MPM_FSI/: CMakeLists.txt
applications/NONLOCAL/: CMakeLists.txt
applications/NSProjection/: CMakeLists.txt  main.cpp
applications/NavierStokesTemp_AMR/: CMakeLists.txt
applications/Nitsche/: CMakeLists.txt
applications/NonLocal/: CMakeLists.txt
applications/NumPdeSpring2015/: CMakeLists.txt
applications/OptimalControl/: CMakeLists.txt  control_faces_square_or_cube.hpp  control_faces_square_or_cube_domain_elements.hpp  elliptic_bdry_param.hpp  elliptic_lift_restr_param.hpp  elliptic_param.hpp  fractional_functions.hpp  opt_systems.hpp  opt_systems_boundary_control_eqn_sobolev_fractional.hpp  opt_systems_boundary_control_eqn_sobolev_integer.hpp  opt_systems_cost_functional.hpp  opt_systems_dirichlet.hpp  opt_systems_elliptic_dirichlet.hpp  opt_systems_elliptic_neumann.hpp  opt_systems_neumann.hpp  opt_systems_ns_dirichlet.hpp  param.hpp  square_or_cube_00_mesh_files_for_control.hpp  square_or_cube_01_control_faces.hpp  square_or_cube_01b_control_faces_domain_elements.hpp  square_or_cube_02_boundary_conditions.hpp  square_or_cube_03_cost_functional.hpp  square_or_cube_03_cost_functional_without_regularization.hpp  square_or_cube_05_opt_system_inequalities.hpp  square_or_cube_boundary_conditions.hpp  square_or_cube_control_faces.hpp  square_or_cube_control_faces_domain_elements.hpp  square_or_cube_mesh_files_for_control.hpp
applications/PCFieldSplit/: CMakeLists.txt
applications/Poisson/: CMakeLists.txt  main.cpp
applications/Poisson_AMR/: CMakeLists.txt  main.cpp
applications/RK/: CMakeLists.txt
applications/Refinement/: CMakeLists.txt
applications/SW/: CMakeLists.txt
applications/SteadyNavierStokesParallel/: CMakeLists.txt  main.cpp
applications/TaylorGreenVortexFlowGeneralisedalpha/: CMakeLists.txt  main.cpp
applications/Tumor/: CMakeLists.txt
applications/UQ/: CMakeLists.txt
applications/Willmore/: CMakeLists.txt  Willmore.cpp
applications/WillmoreSurface/: WillmoreSurface.cpp
applications/Willmore_gen/: CMakeLists.txt
applications/app_bhagya/: app_bhagya.cpp
applications/app_krystinsteelman/: app_krystinsteelman.cpp
applications/app_sirush/: app_sirush.cpp
applications/ex2/: CMakeLists.txt  ex2.cpp
applications/fsi_porous/: CMakeLists.txt  MyMultigrid.cpp  MyMultigrid.hpp  RunTimeMapSingleton.cpp  RunTimeMapSingleton.hpp  main.cpp  main.hpp
applications/gencase/: CMakeLists.txt  GenCase.cpp  GenCase.hpp  main.cpp  salome_io.cpp  salome_io.hpp  unstructured_mesh.cpp
applications/include/: FSIassembly.hpp  IncompressibleFSIAssembly.hpp
applications/mhdopt/: CMakeLists.txt  (+15 more)
src/: .directory  Box.cpp  CMakeLists.txt  CurrElem.cpp  CurrGaussPoint.cpp  DenseMatrix.cpp  DenseMatrixBase.cpp  DenseSubmatrix.cpp  DenseVectorBase.cpp  Elem.cpp  ElemSto.cpp  ElemType.cpp  EqnBase.cpp  EquationsMap.cpp  ExplicitSystem.cpp  FEElemBase.cpp  FEHex27.cpp  FETet1.cpp  FETri1.cpp  FETri6.cpp  FemTTUInit.cpp  FemusInit.cpp  Files.cpp  Fluid.cpp  GeomEl.cpp  Graph.cpp  ImplicitSystem.cpp  LinSysPde.cpp  LinearImplicitSystem.cpp  LinearSolver.cpp  LinearSolverM.cpp  Material.cpp  Mesh.cpp  MultiLevelProblem.cpp  NonLinearImplicitSystem.cpp  NonLinearMultiLevelProblem.cpp  NonLinearTimeDependentMultiLevelProblem.cpp  Parameter.cpp  PetscLinearSolver.cpp  PetscLinearSolverM.cpp  (+33 more)
unittests/: CMakeLists.txt
(+6998 files in other folders)
